SERVER-20058 ConfigCoordinator should not do SetShardVersion exchange

Adds an argument to DBClientMultiCommand so it doesn't do SetShardVersion
exchange when talking to config servers. This causes deadlock with catalog
manager change on upgrade from Sync to CSRS.